Fix the pop-up box from not showing

--- a/index.css
+++ b/index.css
@@ -26,12 +26,14 @@ button {
     height:auto;
     text-align: center;
     padding: 10px;
-    margin-top: 50%;
-    margin-right: 90%;
+    margin-top: 33%;
+    margin-right: 85%;
+    margin-left: 12px;
     border:black solid 2px;
     width: 210px;
     position: fixed;
-    background-color: blue;
+    background-color: #dddddd;
+    z-index: -1;
 }
 
 body{
